--- a/src/App.css
+++ b/src/App.css
@@ -56,18 +56,21 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
     sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';     
 }
-button,#newtask{
+button,#newtask,#redbutton{
   background-color: #0000;
   color: white;
   border: 1px solid black;
   font-size: 1em;
   border-radius: 5px ;     
+  margin-left: 15px ;
+  padding: 5px 10px;
+  
 }   
 #newtask{
   border: 1px solid #646cff
 }
 #newtask:hover{
-  background-color: #3333;
+  background-color: #ede6e633;
   cursor: pointer;
 }
 #newtask:active{
@@ -77,8 +80,34 @@ button,#newtask{
   outline:  #646cff;
   outline-offset: 2px;
 }
+
 small{
   color: #aaa;
   font-size: 0.8em;
   
 }
+#redbutton{
+
+ 
+}
+#redbutton:hover{
+  border: 1px solid #ff0000;
+  cursor: pointer;
+}
+#redbutton:active{
+  background-color: #c00000;
+}
+a{
+  color: inherit;
+  text-decoration: none;
+}
+a:visited,a:hover,a:active{
+  text-decoration: underline;
+  color: inherit;
+}
+
+
+
+
+
+
